# FastApplets

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  TODO.md  TODO.org
ActionApplet/: CMakeLists.txt  main.cpp
ActionApplet/Types/: ActionAppletTraits.h  CMakeLists.txt
ActionApplet/UI/: ActionCentralWidget.cpp  ActionCentralWidget.h  ActionMainWindow.cpp  ActionMainWindow.h  CMakeLists.txt
ActionApplet/UI/Widgets/: ActionButton.cpp  ActionButton.h  CMakeLists.txt
Core/Applets/Types/: AppletTraits.h  AppletType.h  CMakeLists.txt
Core/Config/: CMakeLists.txt
Core/Config/ConfigFile/: CMakeLists.txt
Core/Config/ConfigFile/ActionApplet/: ActionAppletConfig.cpp  ActionAppletConfig.h  CMakeLists.txt
Core/Config/ConfigFile/Config/: CMakeLists.txt  Config.cpp  Config.h
Core/Config/ConfigFile/Global/: CMakeLists.txt  GlobalConfig.cpp  GlobalConfig.h
Core/Config/ConfigFile/Mapper/: CMakeLists.txt  ConfigMapper.cpp  ConfigMapper.h  ConfigMapper.tpp
Core/Config/ConfigFile/PowerApplet/: CMakeLists.txt  PowerAppletConfig.cpp  PowerAppletConfig.h
Core/Config/ConfigFile/Properties/: CMakeLists.txt  LayoutProperties.cpp  LayoutProperties.h  LayoutProperties.tpp  PrimaryButtonProperties.cpp  PrimaryButtonProperties.h  WindowProperties.cpp
Core/Config/Factory/: CMakeLists.txt  ConfigFactory.h  ConfigFactory.tpp
Core/Config/FileLocator/: CMakeLists.txt  FileLocator.cpp  FileLocator.h
Core/Config/KeysFile/: CMakeLists.txt
Core/Config/KeysFile/ActionApplet/: ActionAppletKeys.cpp  ActionAppletKeys.h  CMakeLists.txt
Core/Config/KeysFile/Global/: CMakeLists.txt  GlobalKeys.cpp  GlobalKeys.h
Core/Config/KeysFile/Keys/: CMakeLists.txt  Keys.cpp  Keys.h
Core/Config/KeysFile/Mapper/: CMakeLists.txt  KeysMapper.cpp  KeysMapper.h  KeysMapper.tpp
Core/Config/KeysFile/PowerApplet/: CMakeLists.txt  PowerAppletKeys.cpp  PowerAppletKeys.h
Core/Config/KeysFile/Types/: CMakeLists.txt
Core/Config/Manager/: CMakeLists.txt  ConfigManager.h  ConfigManager.tpp
Core/Config/Resolver/: CMakeLists.txt  Resolver.h  Resolver.tpp
Core/Config/TomlParser/: CMakeLists.txt  TomlParser.cpp  TomlParser.h
Core/Config/Types/: CMakeLists.txt  ConfigFilepaths.h  NodeView.h
Core/Shell/: CMakeLists.txt  ShellRunner.cpp  ShellRunner.h
Core/UI/: CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  MainWindow.cpp  MainWindow.h  PrimaryButtonsFactory.cpp  PrimaryButtonsFactory.h  PrimaryButtonsFactory.tpp
Core/UI/Types/: ButtonType.cpp  ButtonType.h  CMakeLists.txt
Core/UI/Widgets/: ActionButtonParams.h  CMakeLists.txt  PowerButtonParams.h  PrimaryButton.cpp  PrimaryButton.h  PrimaryButtonParams.h
PowerApplet/: CMakeLists.txt  main.cpp
PowerApplet/Types/: CMakeLists.txt  PowerAppletTraits.h
PowerApplet/UI/: CMakeLists.txt  PowerCentralWidget.cpp  PowerCentralWidget.h  PowerMainWindow.cpp  PowerMainWindow.h
PowerApplet/UI/Widgets/: CMakeLists.txt  PowerButton.cpp  PowerButton.h
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/API/: Curl.cpp  Curl.h
src/Applets/PowerApplet/: CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  PowerMainWindow.cpp  PowerMainWindow.h  main.cpp
src/Applets/Types/: AppletRecord.h  AppletTypes.h  CMakeLists.txt
src/Applets/WeatherApplet/: CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  WeatherMainWindow.cpp  WeatherMainWindow.h  main.cpp
src/Config/: CMakeLists.txt  Config.cpp  Config.h  ConfigLocator.cpp  ConfigLocator.h  ConfigMapper.cpp  ConfigMapper.h  ConfigParser.cpp  ConfigParser.h  DefaultTomlConfig.cpp  DefaultTomlConfig.h  KeyMapper.cpp  KeyMapper.h  Keys.cpp  Keys.h  KeysMapper.cpp  KeysMapper.h  PowerKeybindings.cpp  PowerKeybindings.h  PowerLayout.cpp  PowerLayout.h  PrimaryButtonData.h  SharedKeybindings.cpp  SharedKeybindings.h  SharedLayout.cpp  SharedLayout.h  TomlConfigParser.cpp  TomlConfigParser.h  WeatherLayout.cpp  WeatherLayout.h
src/Config/Config/: CMakeLists.txt  Config.cpp  Config.h  ConfigMapper.cpp  ConfigMapper.h
src/Config/ConfigFile/: CMakeLists.txt  ConfigMapper.cpp  ConfigMapper.h  ConfigMapper.tpp
src/Config/FileLocator/: CMakeLists.txt  FileLocator.cpp  FileLocator.h
src/Config/Keys/: CMakeLists.txt  Keys.cpp  Keys.h  KeysMapper.cpp  KeysMapper.h
src/Config/KeysFile/: CMakeLists.txt  KeysMapper.cpp  KeysMapper.h  KeysMapper.tpp
src/Config/Manager/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfigManager.tpp
src/Config/Resolver/: CMakeLists.txt  Resolver.cpp  Resolver.h  Resolver.tpp
src/Config/Resolvers/: CMakeLists.txt  Extractors.cpp  Extractors.h  Extractors.tpp  Resolvers.cpp  Resolvers.h  Resolvers.tpp
src/Config/TOML/: CMakeLists.txt  ConfigParser.h  NodePair.h  NodeView.h  TomlAccessor.cpp  TomlAccessor.h  TomlAccessor.tpp  TomlLocator.cpp  TomlLocator.h  TomlParser.cpp  TomlParser.h
src/Config/TomlParser/: CMakeLists.txt  TomlParser.cpp  TomlParser.h
src/Config/Types/: CMakeLists.txt  ConfigFiles.h  ConfigTomlFiles.h  ConfigType.h  NodePair.h  NodeView.h
src/Core/: CMakeLists.txt  Log.cpp  Log.h  Log.tpp
src/Core/UI/: MainWindow.cpp
src/DBus/: CMakeLists.txt  DBusRequester.cpp  DBusRequester.h  DBusTarget.h
src/Environment/: CMakeLists.txt  RootResolver.cpp  RootResolver.h  ShellCommand.h  ShellRunner.cpp  ShellRunner.h
src/Log/: CMakeLists.txt  Log.h
src/Networking/: CMakeLists.txt  Curl.cpp
src/Shell/: CMakeLists.txt  ShellCommand.h  ShellRunner.cpp  ShellRunner.h
src/Time/: CMakeLists.txt  Time.cpp  Time.h  TimeConstants.h
src/UI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/UI/Enums/: ButtonIDs.h  CMakeLists.txt
src/UI/Types/: ButtonID.h  ButtonType.cpp  ButtonType.h  CMakeLists.txt
src/UI/Widgets/: Button.cpp  Button.h  CMakeLists.txt  PowerButtonParams.h  PrimaryButton.cpp  PrimaryButton.h  PrimaryButtonData.h  PrimaryButtonParams.h
src/Utils/: Time.cpp  Time.h  TimeConstants.h
src/Widgets/: Button.cpp  Button.h
tests/unit/: CMakeLists.txt
tests/unit/Config/: CMakeLists.txt
tests/unit/Time/: CMakeLists.txt  TimeTest.cpp
(+138 files in other folders)
